--- a/blog.html
+++ b/blog.html
@@ -65,7 +65,7 @@
 					<div class="collapse navbar-collapse main-menu">
                         <div class="nav-menu-wrapper">
                             <ul class="navbar-nav mr-auto" id="menu">
-                                <li class="nav-item"><a class="nav-link" href="index-2.html">home</a></li>                               
+                                <li class="nav-item"><a class="nav-link" href="index.html">home</a></li>                               
                                 <li class="nav-item"><a class="nav-link" href="about.html">about us</a></li>
                                 <li class="nav-item"><a class="nav-link" href="services.html">services</a></li>
                                 <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
@@ -224,12 +224,12 @@
 								<div class="footer-links">
 									<h2>Socials</h2>
 									<ul>
-										<li><a href="https://www.instagram.com/accounts/login/?next=https%3A%2F%2Fwww.instagram.com%2Fthis_user_does_not_exist%2F&is_from_rle">instagram</a></li>
-										<li><a href="https://www.facebook.com/search/pages/?q=ship%20chandler%20longkou">facebook</a></li>
-										<li><a href="https://x.com/LongkouShip">twitter</a></li>
-										<li><a href="https://www.linkedin.com/in/ship-chandler-longkou-172734339/">linkedin</a></li>
-                                        <li><a href="https://www.pinterest.com/shipchandlerlongkou/">pinterest</a></li>
-                                        <li><a href="https://www.youtube.com/channel/UCWBgRmnPVDglYfaNEnXQDNw">youtube</a></li>
+										<li><a href="https://www.instagram.com/accounts/login/?next=https%3A%2F%2Fwww.instagram.com%2Fthis_user_does_not_exist%2F&is_from_rle" target="_blank">instagram</a></li>
+										<li><a href="https://www.facebook.com/search/pages/?q=ship%20chandler%20longkou" target="_blank">facebook</a></li>
+										<li><a href="https://x.com/LongkouShip" target="_blank">twitter</a></li>
+										<li><a href="https://www.linkedin.com/in/ship-chandler-longkou-172734339/" target="_blank">linkedin</a></li>
+                                        <li><a href="https://www.pinterest.com/shipchandlerlongkou/" target="_blank">pinterest</a></li>
+                                        <li><a href="https://www.youtube.com/channel/UCWBgRmnPVDglYfaNEnXQDNw" target="_blank">youtube</a></li>
 
 									</ul>
 								</div>
