--- a/service-single.html
+++ b/service-single.html
@@ -65,7 +65,7 @@
 					<div class="collapse navbar-collapse main-menu">
                         <div class="nav-menu-wrapper">
                             <ul class="navbar-nav mr-auto" id="menu">
-                                <li class="nav-item"><a class="nav-link" href="index-2.html">home</a></li>                               
+                                <li class="nav-item"><a class="nav-link" href="index.html">home</a></li>                               
                                 <li class="nav-item"><a class="nav-link" href="about.html">about us</a></li>
                                 <li class="nav-item"><a class="nav-link" href="services.html">services</a></li>
                                 <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
@@ -121,7 +121,7 @@
 
                     <!-- Service Entry Content Start -->
                     <div class="service-entry">
-                        <p class="wow fadeInUp" data-wow-delay="0.25s">Provision supplies are essential components that ensure smooth operations within the shipping industry. Our service focuses on providing high-quality provisions for maritime vessels, from food and beverages to safety equipment. We specialize in delivering supplies that meet the rigorous standards required for vessel operations, ensuring crew and passenger satisfaction while complying with industry regulations.</p>
+                        <p class="wow fadeInUp" data-wow-delay="0.25s"> At Ship Chandler Longkou Co., Ltd our service focuses on providing high-quality provisions for maritime vessels, from food and beverages to safety equipment. We specialize in delivering supplies that meet the rigorous standards required for vessel operations, ensuring crew and passenger satisfaction while complying with industry regulations. Provision supplies are essential components that ensure smooth operations within the shipping industry. </p>
 
                         <p class="wow fadeInUp" data-wow-delay="0.5s">Our service ensures timely and efficient delivery of provisions to vessels, whether at port or while on the move. We offer a wide range of provisioning options, including fresh food, non-perishable goods, and specialized equipment designed to maintain the health and safety of those aboard. Every provision is selected and packed with utmost care, taking into consideration the specific needs of the shipping company and the duration of the journey.</p>
 
@@ -141,14 +141,14 @@
                         </div>
                         <h3>Provision Supplies Services</h3>
                         <ul>
-                            <li><a href="#">Fresh Food & Beverages</a></li>
-                            <li><a href="#">Non-Perishable Goods</a></li>
-                            <li><a href="#">Safety Equipment</a></li>
-                            <li><a href="#">Medical Supplies</a></li>
-                            <li><a href="#">Cleaning and Hygiene Products</a></li>
-                            <li><a href="#">Waste Disposal Services</a></li>
+                            <li>Fresh Food & Beverages</li>
+                            <li>Non-Perishable Goods</li>
+                            <li>Safety Equipment</li>
+                            <li>Medical Supplies</li>
+                            <li>Cleaning and Hygiene Products</li>
+                            <li>Waste Disposal Services</li>
                         </ul>
-                        <a href="#" class="btn-default">Contact Now</a>
+                        <a href="contact-us.html" class="btn-default">Contact Now</a>
                     </div>
                     <!-- Service List Box End -->
                 </div>
@@ -323,12 +323,12 @@
 								<div class="footer-links">
 									<h2>Socials</h2>
 									<ul>
-										<li><a href="https://www.instagram.com/accounts/login/?next=https%3A%2F%2Fwww.instagram.com%2Fthis_user_does_not_exist%2F&is_from_rle">instagram</a></li>
-										<li><a href="https://www.facebook.com/search/pages/?q=ship%20chandler%20longkou">facebook</a></li>
-										<li><a href="https://x.com/LongkouShip">twitter</a></li>
-										<li><a href="https://www.linkedin.com/in/ship-chandler-longkou-172734339/">linkedin</a></li>
-                                        <li><a href="https://www.pinterest.com/shipchandlerlongkou/">pinterest</a></li>
-                                        <li><a href="https://www.youtube.com/channel/UCWBgRmnPVDglYfaNEnXQDNw">youtube</a></li>
+										<li><a href="https://www.instagram.com/accounts/login/?next=https%3A%2F%2Fwww.instagram.com%2Fthis_user_does_not_exist%2F&is_from_rle" target="_blank">instagram</a></li>
+										<li><a href="https://www.facebook.com/search/pages/?q=ship%20chandler%20longkou" target="_blank">facebook</a></li>
+										<li><a href="https://x.com/LongkouShip" target="_blank">twitter</a></li>
+										<li><a href="https://www.linkedin.com/in/ship-chandler-longkou-172734339/" target="_blank">linkedin</a></li>
+                                        <li><a href="https://www.pinterest.com/shipchandlerlongkou/" target="_blank">pinterest</a></li>
+                                        <li><a href="https://www.youtube.com/channel/UCWBgRmnPVDglYfaNEnXQDNw" target="_blank">youtube</a></li>
 
 									</ul>
 								</div>
