--- a/service-single2.html
+++ b/service-single2.html
@@ -65,7 +65,7 @@
 					<div class="collapse navbar-collapse main-menu">
                         <div class="nav-menu-wrapper">
                             <ul class="navbar-nav mr-auto" id="menu">
-                                <li class="nav-item"><a class="nav-link" href="index-2.html">home</a></li>                               
+                                <li class="nav-item"><a class="nav-link" href="index.html">home</a></li>                               
                                 <li class="nav-item"><a class="nav-link" href="about.html">about us</a></li>
                                 <li class="nav-item"><a class="nav-link" href="services.html">services</a></li>
                                 <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
@@ -121,7 +121,7 @@
                     
                     <!-- Service Entry Content Start -->
                     <div class="service-entry">
-                        <p class="wow fadeInUp" data-wow-delay="0.25s">Our Deck and Engine Stores offer a comprehensive range of equipment and supplies for marine vessels. We provide everything from deck machinery and engine parts to safety equipment and maintenance tools, ensuring that your vessel runs smoothly and safely.</p>
+                        <p class="wow fadeInUp" data-wow-delay="0.25s"> At Ship Chandler Longkou Co., Ltd our Deck and Engine Stores offer a comprehensive range of equipment and supplies for marine vessels. We provide everything from deck machinery and engine parts to safety equipment and maintenance tools, ensuring that your vessel runs smoothly and safely.</p>
                         <p class="wow fadeInUp" data-wow-delay="0.5s">We supply high-quality engine spares, deck accessories, electrical components, ropes, and marine-grade materials. Whether you need routine maintenance tools or advanced engine components, our Deck and Engine Stores are stocked with the products you need for seamless operation.</p>
                         <p class="wow fadeInUp" data-wow-delay="0.75s">Our range of products is designed to meet the highest standards of performance and durability, ensuring that your vessel remains in top condition while at sea. Trust us to provide the best deck and engine solutions for your maritime operations.</p>
                     </div>
@@ -139,14 +139,14 @@
                         </div>
                         <h3>Deck and Engine Stores</h3>
                         <ul>
-                            <li><a href="#">Deck Machinery</a></li>
-                            <li><a href="#">Engine Spares</a></li>
-                            <li><a href="#">Marine Electrical Components</a></li>
-                            <li><a href="#">Deck Accessories</a></li>
-                            <li><a href="#">Ropes and Cables</a></li>
-                            <li><a href="#">Maintenance Tools</a></li>
+                            <li>Deck Machinery</li>
+                            <li>Engine Spares</li>
+                            <li>Marine Electrical Components</li>
+                            <li>Deck Accessories</li>
+                            <li>Ropes and Cables</li>
+                            <li>Maintenance Tools</li>
                         </ul>
-                        <a href="#" class="btn-default">contact now</a>
+                        <a href="contact-us.html" class="btn-default">contact now</a>
                     </div>
                     <!-- Service List Box End -->
                 </div>
@@ -326,12 +326,12 @@
 								<div class="footer-links">
 									<h2>Socials</h2>
 									<ul>
-										<li><a href="https://www.instagram.com/accounts/login/?next=https%3A%2F%2Fwww.instagram.com%2Fthis_user_does_not_exist%2F&is_from_rle">instagram</a></li>
-										<li><a href="https://www.facebook.com/search/pages/?q=ship%20chandler%20longkou">facebook</a></li>
-										<li><a href="https://x.com/LongkouShip">twitter</a></li>
-										<li><a href="https://www.linkedin.com/in/ship-chandler-longkou-172734339/">linkedin</a></li>
-                                        <li><a href="https://www.pinterest.com/shipchandlerlongkou/">pinterest</a></li>
-                                        <li><a href="https://www.youtube.com/channel/UCWBgRmnPVDglYfaNEnXQDNw">youtube</a></li>
+										<li><a href="https://www.instagram.com/accounts/login/?next=https%3A%2F%2Fwww.instagram.com%2Fthis_user_does_not_exist%2F&is_from_rle" target="_blank">instagram</a></li>
+										<li><a href="https://www.facebook.com/search/pages/?q=ship%20chandler%20longkou" target="_blank">facebook</a></li>
+										<li><a href="https://x.com/LongkouShip" target="_blank">twitter</a></li>
+										<li><a href="https://www.linkedin.com/in/ship-chandler-longkou-172734339/" target="_blank">linkedin</a></li>
+                                        <li><a href="https://www.pinterest.com/shipchandlerlongkou/" target="_blank">pinterest</a></li>
+                                        <li><a href="https://www.youtube.com/channel/UCWBgRmnPVDglYfaNEnXQDNw" target="_blank">youtube</a></li>
 
 									</ul>
 								</div>
