--- a/service-single3.html
+++ b/service-single3.html
@@ -65,7 +65,7 @@
 					<div class="collapse navbar-collapse main-menu">
                         <div class="nav-menu-wrapper">
                             <ul class="navbar-nav mr-auto" id="menu">
-                                <li class="nav-item"><a class="nav-link" href="index-2.html">home</a></li>                               
+                                <li class="nav-item"><a class="nav-link" href="index.html">home</a></li>                               
                                 <li class="nav-item"><a class="nav-link" href="about.html">about us</a></li>
                                 <li class="nav-item"><a class="nav-link" href="services.html">services</a></li>
                                 <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
@@ -121,7 +121,7 @@
                     
                     <!-- Service Entry Content Start -->
                     <div class="service-entry">
-                        <p class="wow fadeInUp" data-wow-delay="0.25s">Our safety equipment services provide high-quality gear and accessories to ensure the safety of workers in hazardous environments. Whether it's personal protective equipment (PPE) or fire safety gear, we have everything you need to stay safe. From head protection to safety shoes, our products are designed for comfort, durability, and optimal protection.</p>
+                        <p class="wow fadeInUp" data-wow-delay="0.25s">At Ship Chandler Longkou Co., Ltd our safety equipment services provide high-quality gear and accessories to ensure the safety of workers in hazardous environments. Whether it's personal protective equipment (PPE) or fire safety gear, we have everything you need to stay safe. From head protection to safety shoes, our products are designed for comfort, durability, and optimal protection.</p>
                         <p class="wow fadeInUp" data-wow-delay="0.5s">We specialize in supplying top-of-the-line safety equipment, including helmets, gloves, eye protection, and hearing protection. Our goal is to help you maintain a safe working environment by providing high-performance, certified safety gear that meets all industry standards.</p>
                         <p class="wow fadeInUp" data-wow-delay="0.75s">We offer a wide range of safety products, including respiratory protection, safety vests, fall protection, and first-aid kits. All of our products are rigorously tested for quality and reliability, ensuring they perform effectively in real-world conditions. Trust us to provide the equipment that keeps your team safe and compliant with safety regulations.</p>
                     </div>
@@ -139,14 +139,14 @@
                         </div>
                         <h3>Safety Equipment</h3>
                         <ul>
-                            <li><a href="#">Personal Protective Equipment (PPE)</a></li>
-                            <li><a href="#">Fire Safety Equipment</a></li>
-                            <li><a href="#">Respiratory Protection</a></li>
-                            <li><a href="#">Fall Protection Gear</a></li>
-                            <li><a href="#">First-Aid Kits</a></li>
-                            <li><a href="#">Eye and Hearing Protection</a></li>
+                            <li>Personal Protective Equipment (PPE)</li>
+                            <li>Fire Safety Equipment</li>
+                            <li>Respiratory Protection</li>
+                            <li>Fall Protection Gear</li>
+                            <li>First-Aid Kits</li>
+                            <li>Eye and Hearing Protection</li>
                         </ul>
-                        <a href="#" class="btn-default">contact now</a>
+                        <a href="contact-us.html" class="btn-default">contact now</a>
                     </div>
                     <!-- Service List Box End -->
                 </div>
@@ -326,12 +326,12 @@
 								<div class="footer-links">
 									<h2>Socials</h2>
 									<ul>
-										<li><a href="https://www.instagram.com/accounts/login/?next=https%3A%2F%2Fwww.instagram.com%2Fthis_user_does_not_exist%2F&is_from_rle">instagram</a></li>
-										<li><a href="https://www.facebook.com/search/pages/?q=ship%20chandler%20longkou">facebook</a></li>
-										<li><a href="https://x.com/LongkouShip">twitter</a></li>
-										<li><a href="https://www.linkedin.com/in/ship-chandler-longkou-172734339/">linkedin</a></li>
-                                        <li><a href="https://www.pinterest.com/shipchandlerlongkou/">pinterest</a></li>
-                                        <li><a href="https://www.youtube.com/channel/UCWBgRmnPVDglYfaNEnXQDNw">youtube</a></li>
+										<li><a href="https://www.instagram.com/accounts/login/?next=https%3A%2F%2Fwww.instagram.com%2Fthis_user_does_not_exist%2F&is_from_rle" target="_blank">instagram</a></li>
+										<li><a href="https://www.facebook.com/search/pages/?q=ship%20chandler%20longkou" target="_blank">facebook</a></li>
+										<li><a href="https://x.com/LongkouShip" target="_blank">twitter</a></li>
+										<li><a href="https://www.linkedin.com/in/ship-chandler-longkou-172734339/" target="_blank">linkedin</a></li>
+                                        <li><a href="https://www.pinterest.com/shipchandlerlongkou/" target="_blank">pinterest</a></li>
+                                        <li><a href="https://www.youtube.com/channel/UCWBgRmnPVDglYfaNEnXQDNw" target="_blank">youtube</a></li>
 
 									</ul>
 								</div>
